--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -54,7 +54,7 @@
                             <li><a href="/logout">退出登录</a></li>
                         </ul>
                     </li>
-                    <li th:if="${session.user == null}">
+                    <li th:if="${session.user == null}"><!---->
 <!--
                         <a th:href="@{https://github.com/login/oauth/authorize(client_id='f0326fa2aa919f747e7c',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('redirectUri')},scope='user',state=1)}">登录</a>
 -->
